Remove test on branch push

--- a/packages/design-system-react/package.json
+++ b/packages/design-system-react/package.json
@@ -191,8 +191,7 @@
     "lint-staged"
   ],
   "pre-push": [
-    "validate",
-    "test"
+    "validate"
   ],
   "prettier": {
     "arrowParens": "always",
