--- a/packages/design-system/ui/components/path/tokens/background-color.yml
+++ b/packages/design-system/ui/components/path/tokens/background-color.yml
@@ -18,6 +18,9 @@ props:
   COLOR_BACKGROUND_PATH_ACTIVE:
     value: '{!DEEP_COVE}'
     comment: The background color for Salespath stages that are complete.
+  COLOR_BACKGROUND_PATH_ACTIVE_HOVER:
+    value: '{!BISCAY}'
+    comment: The hovered background color for Salespath stages that are complete.
   COLOR_BACKGROUND_PATH_CURRENT:
     value: '{!SCIENCE_BLUE}'
     comment: The background color for Salespath stages that are the current stage.
