Add .npmrc to scripts folder

--- a/packages/design-system-react/.gitignore
+++ b/packages/design-system-react/.gitignore
@@ -1,7 +1,7 @@
 ### Project files ###
 
 # Only used for release server authentication
-.npmrc
+/.npmrc
 
 # We may want to remove to make first-time contributing easier
 package-lock.json
