--- a/packages/design-system-react/package.json
+++ b/packages/design-system-react/package.json
@@ -126,7 +126,7 @@
     "@storybook/react": "~3.2.0",
     "async": "^2.0.0-rc.5",
     "babel-cli": "^6.24.1",
-    "babel-core": "^6.26.0",
+    "babel-core": "^6.24.0",
     "babel-eslint": "^8.0.2",
     "babel-jest": "^20.0.3",
     "babel-loader": "^7.1.1",
@@ -134,11 +134,11 @@
     "babel-plugin-istanbul": "^4.1.4",
     "babel-plugin-root-import": "^5.1.0",
     "babel-plugin-transform-class-properties": "^6.24.1",
+    "babel-plugin-transform-export-extensions": "6.22.0",
     "babel-plugin-transform-es2015-modules-amd": "^6.24.0",
     "babel-plugin-transform-es2015-modules-commonjs": "^6.24.0",
-    "babel-plugin-transform-export-default": "^7.0.0-alpha.20",
     "babel-polyfill": "^6.26.0",
-    "babel-preset-env": "^1.6.1",
+    "babel-preset-env": "^1.5.2",
     "babel-preset-react": "^6.23.0",
     "basic-auth": "^1.0.4",
     "chai": "^4.0.1",
