Remove eslint no warnings from lint-staged

--- a/packages/design-system-react/package.json
+++ b/packages/design-system-react/package.json
@@ -10,8 +10,7 @@
   "lint-staged": {
     "*.{js,jsx}": [
       "./node_modules/.bin/prettier-eslint --write",
-      "git add",
-      "./node_modules/.bin/eslint --max-warnings=0"
+      "git add"
     ],
     "*.{json,md}": [
       "./node_modules/.bin/prettier --use-tabs=false --write",
