Spring 18 to Summer 18 (#3049)
* chore(checkbox-button-group): Add test (#3023)

* chore(checkbox-button-group): Add test

* chore(checkbox-button-group): skip tests

* chore(checkbox-toggle): Add test (#3029)

* chore(checkbox-toggle): Add test

* chore(checkbox-toggle): skip tests until min/max height issue is fixed

* chore(checkbox-toggle): change component names

* chore(tokens): add scope flag to components (#3044)

--- a/packages/design-system/ui/components/page-headers/tokens/spacing.yml
+++ b/packages/design-system/ui/components/page-headers/tokens/spacing.yml
@@ -2,6 +2,7 @@
 # Licensed under BSD 3-Clause - see LICENSE.txt or git.io/sfdc-license
 
 global:
+  scope: component
   category: spacing
   type: size
   comment: ''
