--- a/packages/design-system/ui/components/color-picker/tokens/sizing.yml
+++ b/packages/design-system/ui/components/color-picker/tokens/sizing.yml
@@ -2,6 +2,7 @@
 # Licensed under BSD 3-Clause - see LICENSE.txt or git.io/sfdc-license
 
 global:
+  scope: component
   category: sizing
   type: size
   cssProperties:
