feat(text): change color-text-success and add example (#3046)
* feat(text): change color-text-success and add example

* feat(text): update snapshots

--- a/packages/design-system/design-tokens/force-base/aliases/color.yml
+++ b/packages/design-system/design-tokens/force-base/aliases/color.yml
@@ -114,6 +114,7 @@ aliases:
   BIGSTONE_BLUE: "hsl(210, 66.67%, 12%)"
   CINNAMON: "#844800"
   FUN_GREEN: "#028048"
+  FOREST_GREEN: "#027E46"
   CERULEAN: "#00A1DF"
   MYSTIC: "#E4E9F3"
   TOREA_BAY: "#0B2399"
