--- a/packages/design-system/design-tokens/salesforce-skin/text-color.yml
+++ b/packages/design-system/design-tokens/salesforce-skin/text-color.yml
@@ -122,7 +122,7 @@ props:
     value: '{!TANGERINE}'
     comment: Customer text used in anchor subtitle
   COLOR_TEXT_SUCCESS:
-    value: '{!FUN_GREEN}'
+    value: '{!FOREST_GREEN}'
     comment: Text color for success text.
   COLOR_TEXT_SUCCESS_INVERSE:
     value: '{!EMERALD}'
