fix(path): add focus and reorder active styles (#2974)
* fix(path): add focus and reorder active styles

* fix(path): add slds-is-focused class

* fix(path): scope to slds-is-complete

* feat(path): reuse active styling

--- a/packages/design-system/ui/components/path/tokens/background-color.yml
+++ b/packages/design-system/ui/components/path/tokens/background-color.yml
@@ -18,7 +18,7 @@ props:
     comment: The hover background color for Salespath stages that are complete.
   COLOR_BACKGROUND_PATH_ACTIVE:
     value: '{!DEEP_COVE}'
-    comment: The background color for Salespath stages that are complete.
+    comment: The background color for Salespath stages that are active.
   COLOR_BACKGROUND_PATH_ACTIVE_HOVER:
     value: '{!BISCAY}'
     comment: The hovered background color for Salespath stages that are complete.
