Clarify and fix lint scripts

--- a/packages/design-system-react/package.json
+++ b/packages/design-system-react/package.json
@@ -16,10 +16,10 @@
     "heroku-postbuild": "./scripts/heroku-postbuild.sh",
     "icons": "./node_modules/.bin/babel-node scripts/inline-icons.js",
     "link": "./scripts/npm-link.sh",
-    "eslint": "echo \"'npm run lint' is probably the command you are looking for...\" && ./node_modules/.bin/eslint \"**/*.{js,jsx}\"",
-    "eslint:fix": "echo \"'npm run lint:fix' is probably the command you are looking for...\" && ./node_modules/.bin/eslint --fix \"**/*.{js,jsx}\"",
-    "lint": "./node_modules/.bin/prettier-eslint --list-different \"**/*.{js,jsx}\" && ./node_modules/.bin/prettier --use-tabs=false --list-different \"*.{json,md}\"",
+    "lint": "npm run lint:style && npm run lint:quality",
     "lint:fix": "./node_modules/.bin/prettier-eslint --write \"**/*.{js,jsx}\" && ./node_modules/.bin/prettier --use-tabs=false --write \"*.{json,md}\"",
+    "lint:quality": "./node_modules/.bin/eslint \"**/*.{js,jsx}\" --max-warnings=0",
+    "lint:style": "./node_modules/.bin/prettier-eslint --list-different \"**/*.{js,jsx}\" && ./node_modules/.bin/prettier --use-tabs=false --list-different \"*.{json,md}\"",
     "publish:origin": "./node_modules/.bin/babel-node scripts/publish-to-git.js",
     "publish:edge": "./node_modules/.bin/babel-node scripts/publish-to-git.js --tag=edge",
     "publish:upstream": "./node_modules/.bin/babel-node scripts/publish-to-git.js --remote=upstream",
