fix(token): change color-text-link token (#3052)
* fix(token): change color-text-link token

* chore(tokens): update snapshots

chore(tokens): update snapshots

--- a/packages/design-system/design-tokens/palette-colors.yml
+++ b/packages/design-system/design-tokens/palette-colors.yml
@@ -116,7 +116,7 @@ props:
     value: "#eeeeee"
     comment: "Active / Hover state of BRAND_HEADER_CONTRAST"
   BRAND_TEXT_LINK:
-    value: "#0070D2"
+    value: "#006DCC"
     comment: "Primary text link brand color"
   BRAND_TEXT_LINK_ACTIVE:
     value: "#005fb2"
