--- a/packages/design-system-react/package.json
+++ b/packages/design-system-react/package.json
@@ -17,9 +17,9 @@
     "icons": "./node_modules/.bin/babel-node scripts/inline-icons.js",
     "link": "./scripts/npm-link.sh",
     "lint": "npm run lint:style && npm run lint:quality",
-    "lint:fix": "./node_modules/.bin/prettier-eslint --write \"**/*.{js,jsx}\" && ./node_modules/.bin/prettier --use-tabs=false --write \"*.{json}\"",
+    "lint:fix": "./node_modules/.bin/prettier-eslint --write \"**/*.{js,jsx}\" && ./node_modules/.bin/prettier --use-tabs=false --write \"*.json\"",
     "lint:quality": "./node_modules/.bin/eslint \"**/*.{js,jsx}\" --max-warnings=0",
-    "lint:style": "./node_modules/.bin/prettier-eslint --list-different \"**/*.{js,jsx}\" && ./node_modules/.bin/prettier --use-tabs=false --list-different \"*.{json}\"",
+    "lint:style": "./node_modules/.bin/prettier-eslint --list-different \"**/*.{js,jsx}\" && ./node_modules/.bin/prettier --use-tabs=false --list-different \"*.json\"",
     "publish:origin": "./node_modules/.bin/babel-node scripts/publish-to-git.js",
     "publish:edge": "./node_modules/.bin/babel-node scripts/publish-to-git.js --tag=edge",
     "publish:upstream": "./node_modules/.bin/babel-node scripts/publish-to-git.js --remote=upstream",
