feat(text): Add monospace font family (#3078)
* feat(text): Add monospace font family

* fix(text): remove code selector

* chore(text): add monospace example

--- a/packages/design-system/design-tokens/force-base/font-family.yml
+++ b/packages/design-system/design-tokens/force-base/font-family.yml
@@ -18,3 +18,5 @@ props:
     value: '{!SANS_SERIF}'
   FONT_FAMILY_HEADING:
     value: '{!SANS_SERIF}'
+  FONT_FAMILY_MONOSPACE:
+    value: '{!MONOSPACE}'
