--- a/packages/design-system-react/package.json
+++ b/packages/design-system-react/package.json
@@ -8,27 +8,27 @@
 		"npm": "^5.5.1"
 	},
 	"scripts": {
-		"build-docs": "$(npm bin)/babel-node ./scripts/build-docs.js",
-		"build-and-test-docs": "npm run build-docs && $(npm bin)/babel-node ./tests/component-docs-test.js",
+		"build-docs": "npx babel-node ./scripts/build-docs.js",
+		"build-and-test-docs": "npm run build-docs && npx babel-node ./tests/component-docs-test.js",
 		"build-storybook": "build-storybook -o ./storybook",
 		"build-storybook-for-tests": "build-storybook -o ./storybook-based-tests -c ./.storybook-based-tests",
 		"dist": "scripts/dist.sh",
 		"heroku-prebuild": "./scripts/heroku-prebuild.sh",
 		"heroku-postbuild": "./scripts/heroku-postbuild.sh",
-		"icons": "$(npm bin)/babel-node scripts/inline-icons.js",
+		"icons": "npx babel-node scripts/inline-icons.js",
 		"link": "./scripts/npm-link.sh",
 		"lint": "npm run lint:style && npm run lint:quality",
-		"lint:docs": "$(npm bin)/prettylint \"*.md\"",
-		"lint:fix": "$(npm bin)/eslint \"./tests/eslint-config-test.js\" && $(npm bin)/prettier-eslint --write \"**/*.{js,jsx}\" && $(npm bin)/prettylint \"*.json\" --fix",
-		"lint:quality": "$(npm bin)/eslint \"**/*.{js,jsx,json}\" --max-warnings=0",
-		"lint:style": "$(npm bin)/eslint \"./tests/eslint-config-test.js\" && $(npm bin)/prettier-eslint --list-different \"**/*.{js,jsx}\" && $(npm bin)/prettylint \"*.json\"",
-		"publish:origin": "$(npm bin)/babel-node scripts/publish-to-git.js",
-		"publish:edge": "$(npm bin)/babel-node scripts/publish-to-git.js --tag=edge",
-		"publish:upstream": "$(npm bin)/babel-node scripts/publish-to-git.js --remote=upstream",
-		"release:patch": "$(npm bin)/babel-node scripts/release.js --release=patch",
-		"release:minor": "$(npm bin)/babel-node scripts/release.js --release=minor",
-		"snapshot-test": "$(npm bin)/jest",
-		"start": "$(npm bin)/start-storybook -p 9001 -s ./node_modules & node tests/browser-tests-app",
+		"lint:docs": "npx prettylint \"*.md\"",
+		"lint:fix": "npx eslint \"./tests/eslint-config-test.js\" && npx prettier-eslint --write \"**/*.{js,jsx}\" && npx prettylint \"*.json\" --fix",
+		"lint:quality": "npx eslint \"**/*.{js,jsx,json}\" --max-warnings=0",
+		"lint:style": "npx eslint \"./tests/eslint-config-test.js\" && npx prettier-eslint --list-different \"**/*.{js,jsx}\" && npx prettylint \"*.json\"",
+		"publish:origin": "npx babel-node scripts/publish-to-git.js",
+		"publish:edge": "npx babel-node scripts/publish-to-git.js --tag=edge",
+		"publish:upstream": "npx babel-node scripts/publish-to-git.js --remote=upstream",
+		"release:patch": "npx babel-node scripts/release.js --release=patch",
+		"release:minor": "npx babel-node scripts/release.js --release=minor",
+		"snapshot-test": "npx jest",
+		"start": "npx start-storybook -p 9001 -s ./node_modules & node tests/browser-tests-app",
 		"start:static": "node app",
 		"storybook": "start-storybook -p 9001 -s ./node_modules",
 		"test": "scripts/local-qa.sh --no-fix",
