--- a/packages/design-system/design-tokens/force-base/text-color.yml
+++ b/packages/design-system/design-tokens/force-base/text-color.yml
@@ -9,7 +9,7 @@ global:
   - fill
 imports:
 - ./aliases/color.yml
-- ../color-palettes.yml
+- ../aliases/color-palettes.yml
 props:
   ## DEFAULT
   COLOR_TEXT_PRIMARY:
