--- a/packages/design-system/design-tokens/console-base/spacing.yml
+++ b/packages/design-system/design-tokens/console-base/spacing.yml
@@ -17,7 +17,7 @@ global:
   - '*height'
   - box-shadow
 imports:
-- ../force-base/aliases/spacing.yml
+- ../aliases/spacing.yml
 props:
   CARD_SPACING_MARGIN:
     value: '{!SPACING_SMALL}'
