--- a/packages/design-system/design-tokens/force-base/background-color.yml
+++ b/packages/design-system/design-tokens/force-base/background-color.yml
@@ -10,7 +10,7 @@ global:
   - box-shadow
 imports:
 - ./aliases/color.yml
-- ../color-palettes.yml
+- ../aliases/color-palettes.yml
 props:
   ## DEFAULTS FROM SALESFORCE-SKIN
   COLOR_BACKGROUND_PRIMARY:
