feat(densify): Swap out tokens for variable tokens [DO NOT MERGE] (#3189)
* feat(cards): Swap out tokens for variable tokens

* feat(page-headers): Swap out tokens for variable tokens

* feat(file-selector): Swap out tokens for variable tokens

* feat(densify): Temporarily disable test

* feat(densify): Update Page Header and Exandable Section

* Update snapshots

* feat(cards): Tweak footer tokens

--- a/packages/design-system/ui/components/page-headers/tokens/spacing.yml
+++ b/packages/design-system/ui/components/page-headers/tokens/spacing.yml
@@ -22,7 +22,10 @@ imports:
 props:
   PAGE_HEADER_SPACING_MARGIN:
     value: '0'
+    deprecated: true
   PAGE_HEADER_SPACING_PADDING:
     value: '{!SPACING_MEDIUM}'
+    deprecated: true
   PAGE_HEADER_SPACING_ROW:
     value: '{!SPACING_SMALL} {!SPACING_MEDIUM}'
+    deprecated: true
