chore(tokens): update token properties for spacing

--- a/packages/design-system/design-tokens/spacing.yml
+++ b/packages/design-system/design-tokens/spacing.yml
@@ -12,8 +12,12 @@ global:
   - left
   - 'margin*'
   - 'padding*'
+  - 'border*'
   - '*width'
   - '*height'
+  - box-shadow
+  - stroke
+  - stroke-width
 
 imports:
 - ./aliases/spacing.yml
