Add tag to package.json

--- a/packages/design-system-react/package.json
+++ b/packages/design-system-react/package.json
@@ -69,6 +69,7 @@
 		"lightning",
 		"design system",
 		"lightning design system",
+		"salesforce-lightning",
 		"salesforce lightning design system",
 		"interactive components",
 		"interactive",
