feat(text): Add text color for destructive actions (#3263)

--- a/packages/design-system/design-tokens/force-base/text-color.yml
+++ b/packages/design-system/design-tokens/force-base/text-color.yml
@@ -248,4 +248,6 @@ props:
   COLOR_TEXT_SUCCESS_INVERSE:
     value: '{!EMERALD}'
     comment: Text color for success text on dark backgrounds.
-
+  COLOR_TEXT_DESTRUCTIVE:
+    value: '{!FLUSH_MAHOGANY}'
+    comment: Text color for destructive actions
