feat(token): Add support for global variable line height (#3288)

--- a/packages/design-system/design-tokens/force-base.yml
+++ b/packages/design-system/design-tokens/force-base.yml
@@ -4,12 +4,12 @@
 imports:
 - ./spacing.yml
 - ./font-size.yml
+- ./line-height.yml
 - ./force-base/spacing.yml
 - ./force-base/sizing.yml
 - ./force-base/fill.yml
 - ./force-base/font-weight.yml
 - ./force-base/font-size.yml
-- ./force-base/line-height.yml
 - ./force-base/font-family.yml
 - ./force-base/border-radius.yml
 - ./force-base/border-color.yml
