--- a/packages/design-system/design-tokens/line-height.yml
+++ b/packages/design-system/design-tokens/line-height.yml
@@ -20,3 +20,7 @@ props:
   LINE_HEIGHT_TAB:
     value: 2.5rem
     comment: Line heights for tabs
+
+  VAR_LINE_HEIGHT_TEXT:
+    value: '1.375'
+    comment: Variable unitless line-heights for reusability
