--- a/packages/design-system/design-tokens/marketing-cloud.yml
+++ b/packages/design-system/design-tokens/marketing-cloud.yml
@@ -4,5 +4,5 @@
 imports:
 - ./force-base/font-weight.yml
 - ./force-base/font-size.yml
-- ./force-base/line-height.yml
+- ./line-height.yml
 - ./force-base/font-family.yml
