feat(buttons): Add text-destructive Button modifier, text-destructive hover token
* Remove unnecessary annotations

* Add Button text-destructive modifier

* Update Button docs

* Revert "Remove unnecessary annotations"

This reverts commit e28cbb63afd1aeeb036fde3f4f3698e1cbf6b676.

# Conflicts:
#	ui/components/buttons/base/_index.scss

* Add focus state text color

* Add text-destructive hover token

* Update docs for text-destructive buttons

* Update docs

--- a/packages/design-system/design-tokens/force-base/text-color.yml
+++ b/packages/design-system/design-tokens/force-base/text-color.yml
@@ -251,3 +251,6 @@ props:
   COLOR_TEXT_DESTRUCTIVE:
     value: '{!FLUSH_MAHOGANY}'
     comment: Text color for destructive actions
+  COLOR_TEXT_DESTRUCTIVE_HOVER:
+    value: '{!MEXICAN_RED}'
+    comment: Text color for destructive actions - hover state
